# Chatbot-KHCN

./: build_vector_db.py  check_db.py  main_assign_answer.py  main_clean_header.py  main_filter_answer.py  main_normalize.py  main_ocr.py  main_parse.py  physic_test.py  pyproject.toml  query.py  run_api.py  tieuchidanhgia.txt  txt_to_json.py
data/api/: student.json
data/input/answers/: page_001.txt  page_002.txt  page_003.txt  page_004.txt  page_014.txt  page_015.txt  page_016.txt  page_017.txt  page_021.txt  page_022.txt  page_023.txt  page_024.txt  page_025.txt  page_032.txt  page_033.txt  page_034.txt  page_035.txt  page_042.txt  page_043.txt  page_044.txt  page_045.txt  page_046.txt  page_047.txt  page_048.txt  page_049.txt  page_050.txt  page_051.txt  page_052.txt  page_071.txt  page_072.txt  page_084.txt  page_085.txt  page_086.txt  page_087.txt  page_088.txt  page_089.txt  page_090.txt  page_091.txt  page_092.txt  page_104.txt  (+127 more)
data/input/assigned_answers/: page_002.txt  page_014.txt  page_015.txt  page_016.txt  page_021.txt  page_023.txt  (+54 more)
data/output/: page_comparison_summary.json
database/: data-sinh.txt  data_sinh.json  embedding_checkpoint.json  parsed_questions.json  parsing_statistics.json  quiz_storage.db  quiz_storage.db-shm  quiz_storage.db-wal  student_evaluations.db
src/api/: app.py
src/parsers/: __init__.py  pdf_answer_extractor.py  pdf_parser.py
src/tools/: chat_history_manager.py  evaluation_storage.py  quiz_generator.py  quiz_storage.py  session_manager.py  submission_manager.py
src/utils/: docx_to_pdf.py
test/: old_threshold.txt
(+1291 files in other folders)
